
AC_INIT(rtsp, 0.1, ajlennon@dynamicdevices.co.uk)
AC_CONFIG_SRCDIR([rtsp-server.c])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(rtsp-server, main)

AC_SUBST(PKG_CONFIG_SYSROOT_DIR)

# Checks for programs. 
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
AM_PROG_LIBTOOL

# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.
# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

